@@ -1,4 +1,11 @@
-OpenVi 7.0.7 -> OpenVi 7.0.8-dev (Unreleased): Fri Jan 28 19:03:34 2022
+OpenVi 7.0.7 -> OpenVi 7.0.8-dev (Unreleased): Fri Jan 28 20:13:24 2022
+	+ Add `imctrl` and `imkey` options, inspired by `cannactrl` and `fepkey`
+	  options in `nvi-m17n` by itojun. If `imctrl` option is set, the input
+	  method is controlled by using escape sequences compatible with Tera
+	  Term and RLogin. The state of the input method in commands specified
+	  by imkey option is saved and restored automatically. This input method
+	  is deactivated upon returning to command mode; this implementation
+	  taken from NetBSD-current's `contrib/nvi`
 	+ Improve `make` output and use more logical compilation order
 	+ Add `virecover.8` man page adapted from NetBSD
 	+ Add a missing break in `common/log.c`
